Solved CSS layout issue in IE

--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -1600,6 +1600,7 @@ i
 
 #info
 {
+    flex:none;
     padding-bottom:10px;
     border-bottom:1px solid #EDD1DC;
 }
